tests/ui/async-await/async-fn/dyn-pos.stderr
error[E0038]: the trait `AsyncFn` cannot be made into an object
  --> $DIR/dyn-pos.rs:5:16
   |
LL | fn foo(x: &dyn async Fn()) {}
   |                ^^^^^^^^^^ `AsyncFn` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $SRC_DIR/core/src/ops/async_function.rs:LL:COL
   |
   = note: the trait cannot be made into an object because it contains the generic associated type `CallFuture`

error[E0038]: the trait `AsyncFnMut` cannot be made into an object
  --> $DIR/dyn-pos.rs:5:16
   |
LL | fn foo(x: &dyn async Fn()) {}
   |                ^^^^^^^^^^ `AsyncFnMut` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $SRC_DIR/core/src/ops/async_function.rs:LL:COL
   |
   = note: the trait cannot be made into an object because it contains the generic associated type `CallMutFuture`

error[E0038]: the trait `AsyncFn` cannot be made into an object
  --> $DIR/dyn-pos.rs:5:16
   |
LL | fn foo(x: &dyn async Fn()) {}
   |                ^^^^^^^^^^ `AsyncFn` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $SRC_DIR/core/src/ops/async_function.rs:LL:COL
   |
   = note: the trait cannot be made into an object because it contains the generic associated type `CallFuture`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0038]: the trait `AsyncFnMut` cannot be made into an object
  --> $DIR/dyn-pos.rs:5:16
   |
LL | fn foo(x: &dyn async Fn()) {}
   |                ^^^^^^^^^^ `AsyncFnMut` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $SRC_DIR/core/src/ops/async_function.rs:LL:COL
   |
   = note: the trait cannot be made into an object because it contains the generic associated type `CallMutFuture`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0038]: the trait `AsyncFn` cannot be made into an object
  --> $DIR/dyn-pos.rs:5:16
   |
LL | fn foo(x: &dyn async Fn()) {}
   |                ^^^^^^^^^^ `AsyncFn` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $SRC_DIR/core/src/ops/async_function.rs:LL:COL
   |
   = note: the trait cannot be made into an object because it contains the generic associated type `CallFuture`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0038]: the trait `AsyncFnMut` cannot be made into an object
  --> $DIR/dyn-pos.rs:5:16
   |
LL | fn foo(x: &dyn async Fn()) {}
   |                ^^^^^^^^^^ `AsyncFnMut` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $SRC_DIR/core/src/ops/async_function.rs:LL:COL
   |
   = note: the trait cannot be made into an object because it contains the generic associated type `CallMutFuture`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0038]: the trait `AsyncFn` cannot be made into an object
  --> $DIR/dyn-pos.rs:5:12
   |
LL | fn foo(x: &dyn async Fn()) {}
   |            ^^^^^^^^^^^^^^ `AsyncFn` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $SRC_DIR/core/src/ops/async_function.rs:LL:COL
   |
   = note: the trait cannot be made into an object because it contains the generic associated type `CallFuture`
  ::: $SRC_DIR/core/src/ops/async_function.rs:LL:COL
   |
   = note: the trait cannot be made into an object because it contains the generic associated type `CallMutFuture`

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0038`.
